--- a/styles/styles2.css
+++ b/styles/styles2.css
@@ -1,7 +1,88 @@
 body {
     background-color: var(--rosa1);
+    cursor: url('./Cursor/Normal\ Select.cur'), auto;
 }
+
 
 #NavPrincipal {
     background-color: #f70071;
+}
+
+h1 {
+    text-align: center;
+    color: var(--rosa5);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 6em;
+    padding: 1px 1px 1px 1px;
+    margin: 2px 2px 2px 2px;
+}
+
+h2{
+    text-align: center;
+    color: #ffffff;
+    background-color: #ff1b82;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin: 5px 5px 5px 5px;
+    
+}
+
+h3{
+    text-align: center;
+    color: #ff5aa4;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    
+}
+
+#banner {
+   
+    border: #f70071;
+}
+
+.btn-primary {
+    background-color: #ff5aa4;
+    border: #ff5aa4;
+}
+
+.btn-primary:hover {
+    background-color: #f70071;
+    border: #f70071;
+}
+
+a:hover{
+    color: #f70071;
+    text-decoration: dotted;
+    font-size: 1.2em;
+    border: 2px dotted #f70071;
+    cursor: url('./Cursor/cupido.png'), auto;
+}
+
+.title{
+color: #ffffff;
+}
+
+.links{
+    color: #ff5aa4;
+}
+
+.card{
+    color: #ff1b82;
+
+}
+
+.card-header{
+    background-color: #ff1b82;
+    border: 1px solid #ff1b82;
+    border-radius: 10px;
+    margin-bottom: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  
+}
+
+.container {
+    text-align: center;
+    max-width: 100%;
+    height: auto;
 }
